--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
@@ -22,7 +22,18 @@
           
             <mat-icon style="font-size: 30px;color: #37457d;" class="full-icon">description</mat-icon>
         </button> -->
-            <img style="margin-top: 60px;"
+        <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload
+        style="display: none;" accept="image/x-png,image/gif,image/jpeg">
+
+        <div *ngIf="displayLogoWidthRange && bmxClientPageOverview" (mouseleave)="displayLogoWidthRange = false" style="position: absolute;top: 0px;right: 0px;">
+            <p style="margin: 0 0 -12px;color: grey;">logo width: {{bmxItem.componentSettings[0].logoWidth}} px</p>
+            <input type="range" style="margin: 20px;width: 140px;    text-align: center;" [(ngModel)]="bmxItem.componentSettings[0].logoWidth"
+                class="slider-font-size" tickInterval="1" min="50" max="500"
+                [value]="bmxItem.componentSettings[0].logoWidth">
+        </div>
+
+            <img (mouseenter)="displayLogoWidthRange = true" 
+            (dblclick)="fileUpload.click()"  [width]="bmxItem.componentSettings[0].logoWidth"  style="margin-top: 60px;cursor: pointer;"
                 [src]="bmxItem.componentSettings[0].companyLogoURL">
         </div>
     </div>
