image rate images in process

--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -144,7 +144,7 @@
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">trending_down</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('narrow-down')" matTooltip="Narrow Down" matTooltipPosition="right"
+            <button (click)="createNewBmxComponent('narrow-down')" matTooltip="narrow down matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">rule</mat-icon>
             </button>
