--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
@@ -1,32 +1,31 @@
 @mixin BoxShadow($dp) {
   @if $dp==0 {
-      box-shadow: none;
+    box-shadow: none;
   } @else if $dp==1 {
-      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   } @else if $dp==2 {
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   } @else if $dp==3 {
-      box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
   } @else if $dp==4 {
-      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
   } @else if $dp==6 {
-      box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12),
-          0 3px 5px -1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
   } @else if $dp==8 {
-      box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12),
-          0 5px 5px -3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12),
+      0 5px 5px -3px rgba(0, 0, 0, 0.2);
   } @else if $dp==9 {
-      box-shadow: 0 9px 12px 1px rgba(0, 0, 0, 0.14), 0 3px 16px 2px rgba(0, 0, 0, 0.12),
-          0 5px 6px -3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 9px 12px 1px rgba(0, 0, 0, 0.14), 0 3px 16px 2px rgba(0, 0, 0, 0.12),
+      0 5px 6px -3px rgba(0, 0, 0, 0.2);
   } @else if $dp==12 {
-      box-shadow: 0 12px 17px 2px rgba(0, 0, 0, 0.14), 0 5px 22px 4px rgba(0, 0, 0, 0.12),
-          0 7px 8px -4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 12px 17px 2px rgba(0, 0, 0, 0.14), 0 5px 22px 4px rgba(0, 0, 0, 0.12),
+      0 7px 8px -4px rgba(0, 0, 0, 0.2);
   } @else if $dp==16 {
-      box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12),
-          0 8px 10px -5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12),
+      0 8px 10px -5px rgba(0, 0, 0, 0.2);
   } @else if $dp==24 {
-      box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12),
-          0 11px 15px -7px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12),
+      0 11px 15px -7px rgba(0, 0, 0, 0.2);
   }
 }
 
@@ -40,8 +39,7 @@
   color: grey;
 }
 
-
-.red{
+.red {
   background-color: white;
   border-left: rgb(231, 230, 230) 1px solid;
   border-top: rgb(231, 230, 230) 1px solid;
@@ -49,7 +47,7 @@
   // margin: 5px;
 }
 
-.blue{
+.blue {
   background-color: white;
   border-left: rgb(230, 230, 230) 1px solid;
   border-top: rgb(231, 230, 230) 1px solid;
@@ -68,7 +66,6 @@
   justify-items: center;
   // overflow-x: scroll;
 }
-
 
 .rating-text {
   font-size: 17px;
@@ -118,6 +115,24 @@
   @include BoxShadow(6);
 }
 
+.image-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 30px;
+}
+.image-row:hover {
+  @include BoxShadow(4);
+}
+
+.image-cell {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .scroller-style::-webkit-scrollbar {
   width: 3px;
@@ -138,8 +153,6 @@
 .scroller-style::-webkit-scrollbar-thumb:hover {
   background: #283e90;
 }
-
-
 
 textarea {
   resize: none;
@@ -239,17 +252,17 @@ input[type="range"]:focus::-ms-fill-upper {
   background: #ef7f25;
 }
 
-@supports(-webkit-appearance: none) or (-moz-appearance: none) {
-  input[type='checkbox'],
-  input[type='radio'] {
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+  input[type="checkbox"],
+  input[type="radio"] {
     --active: #ee7f25;
     --active-inner: #fff;
-    --focus: 2px rgba(39, 94, 254, .3);
-    --border: #BBC1E1;
+    --focus: 2px rgba(39, 94, 254, 0.3);
+    --border: #bbc1e1;
     --border-hover: #ee7f25;
     --background: #fff;
-    --disabled: #F6F8FF;
-    --disabled-inner: #E1E6F9;
+    --disabled: #f6f8ff;
+    --disabled-inner: #e1e6f9;
     -webkit-appearance: none;
     -moz-appearance: none;
     height: 21px;
@@ -261,26 +274,26 @@ input[type="range"]:focus::-ms-fill-upper {
     cursor: pointer;
     border: 1px solid var(--bc, var(--border));
     background: var(--b, var(--background));
-    transition: background .3s, border-color .3s, box-shadow .2s;
+    transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
     &:after {
-      content: '';
+      content: "";
       display: block;
       left: 0;
       top: 0;
       position: absolute;
-      transition: transform var(--d-t, .3s) var(--d-t-e, ease), opacity var(--d-o, .2s);
+      transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
     }
     &:checked {
       --b: var(--active);
       --bc: var(--active);
-      --d-o: .3s;
-      --d-t: .6s;
-      --d-t-e: cubic-bezier(.2, .85, .32, 1.2);
+      --d-o: 0.3s;
+      --d-t: 0.6s;
+      --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
     }
     &:disabled {
       --b: var(--disabled);
       cursor: not-allowed;
-      opacity: .9;
+      opacity: 0.9;
       &:checked {
         --b: var(--disabled-inner);
         --bc: var(--border);
@@ -317,7 +330,7 @@ input[type="range"]:focus::-ms-fill-upper {
       margin-left: 4px;
     }
   }
-  input[type='checkbox'] {
+  input[type="checkbox"] {
     &:not(.switch) {
       border-radius: 7px;
       &:after {
@@ -353,13 +366,13 @@ input[type="range"]:focus::-ms-fill-upper {
       &:disabled {
         &:not(:checked) {
           &:after {
-            opacity: .6;
+            opacity: 0.6;
           }
         }
       }
     }
   }
-  input[type='radio'] {
+  input[type="radio"] {
     border-radius: 50%;
     &:after {
       width: 19px;
@@ -367,10 +380,10 @@ input[type="range"]:focus::-ms-fill-upper {
       border-radius: 50%;
       background: var(--active-inner);
       opacity: 0;
-      transform: scale(var(--s, .7));
+      transform: scale(var(--s, 0.7));
     }
     &:checked {
-      --s: .5;
+      --s: 0.5;
     }
   }
 }
