--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -151,10 +151,10 @@ textarea {
   line-height: 2rem;
   font-weight: 300;
   background: #ffffff;
-  border: none;
+  
   // border-radius: 1rem;
   outline: none;
-  box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
+  // box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
   // box-shadow: 5px 7px 7px #d1d9e9, 15px 0px 1px #ffffff;
   resize: vertical;
   transition: ease 0.2s;
