--- a/src/app/bmx/bmx-creator/project-list/project-list.component.html
+++ b/src/app/bmx/bmx-creator/project-list/project-list.component.html
@@ -45,7 +45,7 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
                         <td mat-cell *matCellDef="let element">
                             <button mat-icon-button  style="color: #488abc;" aria-label="Example icon button with a home icon"
-                                (click)="sendEmail(element.ProjectId)">
+                                (click)="sendEmail(element.ProjectName)">
                                 <mat-icon>email</mat-icon>
                             </button>
                         </td>
