--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -142,17 +142,43 @@ textarea {
   overflow: auto;
 }
 
+
+textarea::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+textarea::-webkit-scrollbar-track {
+  background: white;
+}
+
+/* Handle */
+textarea::-webkit-scrollbar-thumb {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+textarea::-webkit-scrollbar-thumb:hover {
+  background: #283e90;
+}
+
+// textarea::-webkit-scrollbar {
+//   display: none;
+// }
+
 textarea {
   -webkit-tap-highlight-color: transparent;
   width: 100%;
-  min-height: 3rem; 
-  padding: 1rem 1.5rem;
-  font-size: 1rem;
-  line-height: 2rem;
-  font-weight: 300;
+  // min-height: 1.5rem; 
+  padding: 0.2rem 0.0rem;
+  // font-size: 1rem;
+  // line-height: 2rem;
+  // font-weight: 300;
   background: #ffffff;
+  justify-content: center;
   
-  // border-radius: 1rem;
+  border-radius: 6px;
   outline: none;
   // box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
   // box-shadow: 5px 7px 7px #d1d9e9, 15px 0px 1px #ffffff;
@@ -171,6 +197,11 @@ textarea:focus {
   box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
 }
 
+textarea:placeholder-shown {
+  background: none;
+}
+
+
 /* Chrome/Opera/Safari */
 ::-webkit-input-placeholder {
   color: transparent;
@@ -188,9 +219,6 @@ textarea:focus {
   color: transparent;
 }
 
-textarea:placeholder-shown {
-  background: none;
-}
 
 mat-form-field {
   margin-right: 12px;
