--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -68,7 +68,7 @@
             </div>
             <!-- END RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭 -->
 
-            <!-- RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭-->
+            <!-- NARROW DOWN SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭-->
             <div *ngIf="bmxItem.componentType === 'narrow-down'" class="paragraph">
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
@@ -80,7 +80,7 @@
                 </div>
                 <app-narrow-down [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview"></app-narrow-down>
             </div>
-            <!-- END RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭 -->
+            <!-- END NARROW DOWN SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭 -->
 
             <!-- IMAGE SCALE 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀-->
             <div *ngIf="bmxItem.componentType === 'image-rate-scale'" class="paragraph">
@@ -95,6 +95,21 @@
                 <app-image-rate-scale  [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview"></app-image-rate-scale>
             </div>
             <!-- END IMAGE SCALE 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀 -->
+
+
+            <!-- QUESTION AND ANSWER  ✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️-->
+            <div *ngIf="bmxItem.componentType === 'question-answer'" class="paragraph">
+                <div class="emoji-handle">.</div>
+                <div style="position: absolute;right: 0px;">
+                    <button *ngIf="bmxClientPageOverview"  matTooltip="double click to delete" matTooltipPosition="above"
+                    style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="deleteComponent(i)"
+                        aria-label="delte">
+                        <mat-icon style="font-size: 17px;">cancel</mat-icon>
+                    </button>
+                </div>
+                <app-question-answer  [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview"></app-question-answer>
+            </div>
+            <!-- END QUESTION AND ANSWER  ✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️ -->
 
         </div>
 
@@ -134,15 +149,15 @@
             </button>
             <button (click)="createNewBmxComponent('text-editor')" mat-icon-button matTooltip="add paragraph"
                 matTooltipPosition="right">
-                <mat-icon class="full-icon">note_add</mat-icon>
+                <mat-icon class="full-icon">article</mat-icon>
             </button>
             <button (click)="createNewBmxComponent('rate-scale')" matTooltip="rating matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
-                <mat-icon class="full-icon">grading</mat-icon>
+                <mat-icon class="full-icon">star_border</mat-icon>
             </button>
             <button (click)="createNewBmxComponent('ranking-scale')" matTooltip="rank matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
-                <mat-icon class="full-icon">trending_down</mat-icon>
+                <mat-icon class="full-icon">military_tech</mat-icon>
             </button>
             <button (click)="createNewBmxComponent('narrow-down')" matTooltip="narrow down matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
@@ -151,6 +166,10 @@
             <button (click)="createNewBmxComponent('image-rate-scale')" matTooltip="image rate matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">image</mat-icon>
+            </button>
+            <button (click)="createNewBmxComponent('question-answer')" matTooltip="questions & answers" matTooltipPosition="right"
+                mat-icon-button color="warn" aria-label="aria">
+                <mat-icon class="full-icon">question_answer</mat-icon>
             </button>
             <button *ngIf="!false" (click)="createPage()" matTooltip="Create New Page" matTooltipPosition="right"
                 mat-icon-button aria-label="aria">
@@ -165,11 +184,11 @@
                 <mat-icon class="full-icon">delete_sweep
                 </mat-icon>
             </button>
-            <button *ngIf="true" (click)="bmxClientPageOverview=!bmxClientPageOverview" mat-icon-button matTooltip="reset template"
+            <!-- <button *ngIf="true" (click)="bmxClientPageOverview=!bmxClientPageOverview" mat-icon-button matTooltip="reset template"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">visibility
                 </mat-icon>
-            </button>                      
+            </button>                       -->
         </div>
     </div>
 
