--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -33,8 +33,8 @@
 //   BRAND MATRIX CREATOR DASH
 
 .main-container {
-    // display: flex;
-    // flex-direction: row;
+    display: flex;
+    flex-direction: row;
 
     .logo-badge {
         // border: solid 5px darkblue;
