--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -37,7 +37,11 @@
 }
 .rating-star {
   color: grey;
+  // animation: bounce 1000ms 1000ms ease-in-out  forwards  ;
 }
+
+
+
 
 .red {
   background-color: white;
